# supg

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  payload.h
apps/: main.cpp  supg.cpp  supg.toml
include/supg/core/: config.h  device.h  frame.h  gateway.h  payload.h  rxpk.h  simulator.h
include/supg/util/: channel.h  config.h  data_types.h  functions.h  helper.h
modules/: CMakeLists.txt
scripts/: build.sh  pre-build.sh
src/core/: device.cpp  gateway.cpp  payload.cpp  rxpk.cpp  simulator.cpp
src/util/: functions.cpp  helper.cpp
